--- a/AppEducation/AppEducation/wwwroot/pages/home/css/responsive.css
+++ b/AppEducation/AppEducation/wwwroot/pages/home/css/responsive.css
@@ -570,7 +570,8 @@
         margin-bottom: 30px;
         overflow: hidden;
     }
-    .link-follow ul li a {
+    .
+    ul li a {
         margin-bottom: 10px;
     }
     .footer-top-menu ul li::before {
