--- a/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="row">
             <div class="col-3">
-                <h2 class="text-center display-4">Search</h2>
+                <h2 class="text-center display-4">Tìm Kiếm</h2>
                 <div class="row">
                     <div class="col-md-10">
                         <form action="simple-results.html">
@@ -32,68 +32,78 @@
                                 </div>
                             </div>
                         </form>
+
                     </div>
                 </div>
-            </div>
-            <div class="col-9">
-                <div class="Menu-add-class">
+                <hr />
+                <div class="row">
+                    <h2 class="text-center display-4">Tạo Mới</h2>
                     <div class="link-follow">
                         <ul>
                             <li><a href="#" data-toggle="modal" data-target="#modalSubscriptionForm"><i class="fa fa-plus-circle"></i></a></li>
                         </ul>
                     </div>
+                </div>
+            </div>
+            <div class="col-9">
+                <div class="Menu-add-class">
                     <h3 id="DanhSachLop" class="text-center">Danh Sách Lớp</h3>
                 </div>
                 <hr>
-                @if (Model.AvailableClasses.Count() != 0)
-                {
-                    @foreach (Classes classes in Model.AvailableClasses.ToList())
-                    {
-                        if (classes.isActive)
-                        {
-                            <div class="col-md-3 product-grid">
-                                <div class="swiper-slide">
-                                    <div class="slider-box">
-                                        <p class="time">Lớp</p>
-                                        <p class="detail">@classes.ClassName</p>
-                                        <div class="img-box">
-                                            <img src="~/pages/create/img/icon.jpeg">
-                                        </div>
-                                        <span class="detail">Chủ đề : @classes.Topic</span>
-                                        <span class="giaovien">Giao Vien : @classes.User.UserName</span>
-                                        <span class="online">Online: @classes.OnlineStudent</span>
-                                        <div class="cart">
-                                            <a asp-action="Join" asp-controller="JoinClass" data-toggle="modal" data-target="#modalForm">vào lớp</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        }
+                <div class="card mb-4">
+                                @if (Model.AvailableClasses.Count() != 0)
+                                {
+                                    @foreach (Classes classes in Model.AvailableClasses.ToList())
+                                    {
+                                        if (classes.isActive)
+                                        {
 
-                    }
-                }
-                else
-                {
-                    <h4>Không có lớp nào đang hoạt động</h4>
-                    <div class="row">
-                        <h1></h1>
-                    </div>
-                    <div class="row">
-                        <h1></h1>
-                    </div>
-                    <div class="row">
-                        <h1></h1>
-                    </div>
-                    <div class="row">
-                        <h1></h1>
-                    </div>
-                    <div class="row">
-                        <h1></h1>
-                    </div>
-                    <div class="row">
-                        <h1> </h1>
-                    </div>
-                }
+                                            <div>
+                                                <div class="col-md-4 product-grid">
+                                                    <div class="swiper-slide">
+                                                        <div class="slider-box">
+                                                            <p class="time">Lớp</p>
+                                                            <p class="detail">@classes.ClassName</p>
+                                                            <div class="img-box">
+                                                                <img src="~/pages/create/img/icon.jpeg">
+                                                            </div>
+                                                            <span class="detail">Chủ đề : @classes.Topic</span>
+                                                            <span class="giaovien">Giao Vien : @classes.User.UserName</span>
+                                                            <span class="online">Online: @classes.OnlineStudent</span>
+                                                            <div class="cart">
+                                                                <a asp-action="Join" asp-controller="JoinClass" data-toggle="modal" data-target="#modalForm">vào lớp</a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        }
+
+                                    }
+                                }
+                                else
+                                {
+                                    <h4>Không có lớp nào đang hoạt động</h4>
+                                    <div class="row">
+                                        <h1></h1>
+                                    </div>
+                                    <div class="row">
+                                        <h1></h1>
+                                    </div>
+                                    <div class="row">
+                                        <h1></h1>
+                                    </div>
+                                    <div class="row">
+                                        <h1></h1>
+                                    </div>
+                                    <div class="row">
+                                        <h1></h1>
+                                    </div>
+                                    <div class="row">
+                                        <h1> </h1>
+                                    </div>
+                                }
+                </div>
             </div>
         </div>
     </div>
@@ -153,6 +163,19 @@
         </form>
     </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="~/admin/js/scripts.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+<script src="~/admin/assets/demo/chart-area-demo.js"></script>
+<script src="~/admin/assets/demo/chart-bar-demo.js"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
+<script src="~/admin/assets/demo/datatables-demo.js"></script>
+
 <script src="~/pages/create/bootstrap.min.js"></script>
 <script type="text/javascript" src="~/js/Jquery3.4.1.min.js"></script>
 <script type="text/javascript" src="~/pages/create/mdb.js"></script>
+
+
