--- a/AppEducation/AppEducation/Views/Shared/_LayoutAccount.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutAccount.cshtml
@@ -149,13 +149,14 @@
                     </div>
                 </div>
             </div>
+        </div>
     </header>
     @RenderSection("Header", required: false)
 
     @RenderBody()
 
     @RenderSection("Script", required: false)
-    <footer>
+    <footer style="margin-bottom:0px !important">
         <div class="footer-mid ptb-50">
             <div class="container">
                 <div class="row">
