--- a/AppEducation/AppEducation/Views/Shared/_LayoutHome.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutHome.cshtml
@@ -97,7 +97,7 @@
                                             }
                                         </div>
                                         <div class="safe-area">
-                                            <a asp-action="Create" asp-controller="JoinClass">Học Tập</a>
+                                            <a asp-action="AvailableClasses" asp-controller="JoinClass">Học Tập</a>
                                         </div>
                                         <div class="safe-area">
                                             <a href="#LienHe">Liên Hệ</a>
