--- a/AppEducation/AppEducation/Views/Account/Register.cshtml
+++ b/AppEducation/AppEducation/Views/Account/Register.cshtml
@@ -72,7 +72,7 @@
                             <select asp-for="Job">
                                 <option disabled selected>Choose option</option>
                                 <option value="Student">Student</option>
-                                <option value="Teacher">Teacher</option>
+                                <!--><option value="Teacher">Teacher</option></!-->
                             </select>
                             <div class="select-dropdown"></div>
                         </div>
