--- a/AppEducation/AppEducation/Views/Shared/_LayoutAccount.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutAccount.cshtml
@@ -133,10 +133,10 @@
                         <nav class="navbar navbar-inverse">
                             <ul class="nav navbar-nav">
                                 <li>
-                                    <a hef="#" id="ChuanBiBai">Chuẩn bị bài</a>
+                                    <a hef="#" id="TinTuc">Tin Tức</a>
                                 </li>
                                 <li>
-                                    <a id="HocTrucTuyen" asp-controller="JoinClass" asp-action="Create">Học trực tuyến</a>
+                                    <a id="HocTrucTuyen" asp-controller="JoinClass" asp-action="AvailableClasses">Học trực tuyến</a>
                                 </li>
                                 <li>
                                     <a hef="#" id="KiemTra">Kiểm tra</a>
