--- a/AppEducation/AppEducation/Views/Shared/_LayoutAdmin.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutAdmin.cshtml
@@ -42,7 +42,7 @@
                         <a class="nav-link" asp-controller="Admin" asp-action="Index">
                             <div class="sb-nav-link-icon"></div>
                             Người Dùng
-                        </a>                      
+                        </a>
                         <a class="nav-link" asp-controller="Admin" asp-action="ShowClassOnline">
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                             Lớp Học
@@ -50,6 +50,10 @@
                         <a class="nav-link" asp-action="ClassManager" asp-controller="Admin">
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                             Lịch Sử
+                        </a>
+                        <a class="nav-link" asp-action="Index" asp-controller="RoleAdmin">
+                            <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                            Thiết lập quyền
                         </a>
                     </div>
                 </div>
