--- a/AppEducation/AppEducation/Views/RoleAdmin/Create.cshtml
+++ b/AppEducation/AppEducation/Views/RoleAdmin/Create.cshtml
@@ -1,10 +1,10 @@
-@model string
+﻿@model string
 @{
     Layout = "_LayoutAdmin";
     ViewData["Title"] = "Role Admin";
 }
 
-<div class="bg-primary m-1 p-1"><h4>Create Role</h4></div>
+<div class="bg-primary m-1 p-1"><h4>Add Roles</h4></div>
 <div asp-validation-summary="All" class="text-danger">
 <form asp-action="Create" method="post">
     <div class="form-group">
