--- a/AppEducation/AppEducation/Views/RoleAdmin/Edit.cshtml
+++ b/AppEducation/AppEducation/Views/RoleAdmin/Edit.cshtml
@@ -1,21 +1,21 @@
-@model RoleEditModel
+﻿@model RoleEditModel
 @{
     Layout = "_LayoutAdmin";
     ViewData["Title"] = "Edit Role";
 }
 <div class="bg-primary m-1 p-1 text-white">
-    <h4>Edit Role</h4>
+    <h4>Chỉnh sửa vai trò</h4>
 </div>
 <div asp-validation-summary="All" class="text-danger"></div>
 <form asp-action="Edit" method="post">
     <input type="hidden" name="roleName" value="@Model.Role.Name" />
     <input type="hidden" name="roleId" value="@Model.Role.Id" />
-    <h6 class="bg-info p-1 text-white">Add To @Model.Role.Name</h6>
+    <h6 class="bg-info p-1 text-white">Thêm vào : @Model.Role.Name</h6>
     <table class="table table-bordered table-sm">
         @if (Model.NonMembers.Count() == 0)
         {
             <tr>
-                <td colspan="2">All Users Are Members</td>
+                <td colspan="2">Tất cả người dùng là thành viên</td>
             </tr>
         }
         else
@@ -31,12 +31,12 @@
             }
         }
     </table>
-    <h6 class="bg-info p-1 text-white">Remove From @Model.Role.Name</h6>
+    <h6 class="bg-info p-1 text-white">Xóa khỏi : @Model.Role.Name</h6>
     <table class="table table-bordered table-sm">
         @if (Model.Members.Count() == 0)
         {
             <tr>
-                <td colspan="2">No Users Are Members</td>
+                <td colspan="2">Không có thành viên nào</td>
             </tr>
         }
         else
