--- a/AppEducation/AppEducation/Views/RoleAdmin/Index.cshtml
+++ b/AppEducation/AppEducation/Views/RoleAdmin/Index.cshtml
@@ -7,13 +7,13 @@
 
 <!-- main role controller  -->
     <div class="bg-primary m-1 p-1">
-        <h4>Roles</h4></div>
+        <h4>Roles</h4>
+    </div>
     <div class="text-danger" asp-validation-summary="ModelOnly"></div>
     <table class="table table-sm table-bordered table-bordered">
             <tr>
                 <th>ID</th>
                 <th>Name</th>
-                <th>Users</th>
                 <th></th>
             </tr>
             @if (Model.Count() == 0) {
@@ -38,4 +38,3 @@
     </table>
     <a class="btn btn-primary" asp-action="Create">Create</a>
     <!-- end role controller  -->
-</div>
