--- a/AppEducation/AppEducation/Views/Shared/_LayoutAccount.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutAccount.cshtml
@@ -16,7 +16,15 @@
     <link rel="stylesheet" href="~/pages/profile/css/HeaderUser.css">
     <link rel="stylesheet" href="~/pages/profile/css/FooterUser.css">
     <link rel="stylesheet" href="~/pages/profile/css/MainUser.css">
- 
+
+
+    <link rel="stylesheet" href="~/pages/profile/css/all.min.css">
+    <link rel="stylesheet" href="~/pages/profile/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="~/pages/create/css/create.css" />
+    <link type="text/css" rel="stylesheet" href="~/pages/create/css/mdb.min.css" />
+    <link type="text/css" rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-grid.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
 
 </head>
 
@@ -211,22 +219,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>ơ 
         <div class="footer-bottom">
             <div class="container">
                 <div class="row bt-2">
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                        <div class="link-follow">
-                            <ul>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                                <li><a href="#"><i class="fa fa-flickr"></i></a></li>
-                                <li class="hidden-sm"><a href="#"><i class="fa fa-vimeo"></i></a></li>
-                                <li class="hidden-sm"><a href="#"><i class="fa fa-instagram"></i></a></li>
-                            </ul>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -248,6 +245,8 @@
     <script src="~/pages/profile/js/main_vendor.chunkhash.101202010.bundle.js"></script>
     <script src="~/pages/profile/js/jquery.3.4.1.js"></script>
     <script src="~/pages/profile/js/changelanguage.js"></script>
+    <script src="~/pages/create/bootstrap.min.js"></script>
+    <script type="text/javascript" src="~/js/Jquery3.4.1.min.js"></script>
 </body>
 
 </html>
