--- a/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
@@ -136,8 +136,8 @@
                                         </div>
                                         <div>
                                             <button class="btn-lg btn-warning" id="zoom">Full Screen</button>
+                                            <button class="btn-lg btn-warning" id="reload">Reload</button>
                                         </div>
-
                                     </div>
                                 </div>
                             </div>
@@ -321,6 +321,13 @@
     $(".sim-row-edit-icon2").click(function () {
     $(this).find('i').toggleClass('fas fa-bell-slash');
     });
+
+    // reload page 
+    $(document).ready(function () {
+        $("#reload").click(function () {
+            location.reload();
+        })
+    })
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
